syntax = "proto3";
import "google/protobuf/empty.proto";

message PortDetails {
    string id = 1;
    string name = 2;
    string city = 3;
    string country = 4;
    repeated string alias = 5;
    repeated string regions = 6;
    repeated double coords = 7;
    string province = 8;
    string timezone = 9;
    repeated string unlocs = 10;
    string code = 11;
}

message GetRequest {
    string id = 1;
}

service PortDomain {
    rpc Save(PortDetails) returns (google.protobuf.Empty);
    rpc Get(GetRequest) returns (PortDetails);
}
